wwr/styles/rafting.css
/* @import url('https://fonts.googleapis.com/css2?family=Henny+Penny&family=Joti+One&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap'); */

:root {
    --primary-color: #48A9A6;
    --secondary-color: #E4DFDA;
    --accent1-color: #D4B483;
    --accent2-color: #C1666B; 
}

/* body {
    display: flex;
    flex-direction: column;
} */


/* .headernav{
  justify-content: space-around;
} */

.headernav a{  
    flex: 1 1 auto;
    padding-right: 10px;
    width:80px;
    text-align: center;
    text-decoration: none;
}

nav{
    display: flex;
  }

nav ul{
  display: grid;
  grid-template-columns: repeat(4,1fr);
  justify-content: center;
  justify-items: center;
  list-style-type: none;
  margin: 0;
  padding: 0;
}

nav ul li{
    border-style: solid;
    border-color: #C1666B;
}

nav ul li a {
    text-decoration: none;
    padding: 10px;
    color: black;
}

#header-flex img {
    margin: 0 0.25rem 0 1rem;
	max-width: 100px;
	height: auto;
    
}

#nav-flex{
  display: flex;
  align-items: center;
}


h1, h2 {
    font-family: 'Henny Penny', Georgia, serif;
    color: #C1666B;
    text-align: center;
    padding: 10px;
}

h1{
  font-size: 50px !important;
  font-weight:200;
  padding-top:10px;
}

p {
    font-family: 'Roboto', Arial, sans-serif;
    color: #48A9A6;
    padding: 10px;
}

/* 
main {
    max-width: 840px;
} */

header {
	margin: 1rem auto;
	/* display: grid; */
	/* grid-template-columns: 4; */
	/* align-items: center; */
	/* border-bottom: 1px solid #ccc; */
	/* max-width: 1000px; */
}

.hero{
    position: relative !important;
    width: 100%;
    height: auto;
    background-image: url('../images/rafting18_600.jpg');
    background-size: cover;
    background-repeat: no-repeat;
}

/* .heroimg{
    min-width: 100% !important;
    position: absolute !important;
    min-width: 100vw;
} */

.hero img{
    display: flex;
    display: block;
    /* position: absolute; */
    display: block;
    margin: auto;
    width: 100%;
}



/* .one{
  position: absolute !important;
  padding: 20px;
  min-width: 100vw;
  width: 100%;
  height: 100%;
} */
  
/* .float-right{
    float: right;
    max-width:50% !important; 
} */

/* .float-left{
    float: left !important;
    max-width:50% !important;
  } */

.article {
    background-color: #E4DFDA;
    display: block;
    /* position: absolute; */
    display: flex;
    width: 100%;
    height: auto;
    /* align-items: center;
    justify-content: center; */
}

/* .article::after {
    content: "";
    clear: both;
    display: table;
} */

.history-cont {
    display: flex;
    align-items: center;
    justify-content: center;
    margin: auto;
    width: 100%;
    height: 100px;
    align-content: center;
}

/* .history-img::after {
    content: "";
    clear: both;
    display: table;
} */

/* .history-img {
    box-sizing: border-box;
} */
  
#happycustomer{
    max-width:100px !important;
    padding: 10px;
}

#two {
    margin-top: 10vw;
}
  
#three {
    margin-top: 30vw;
}

.history-img {  
    padding: 10px;
    max-height: 100px;
    width: auto;
}
/* section{
    margin-top: 52vw;
} */

h2 {
    margin: auto;
}

.adventure-section{
    margin: auto;
    display: block;
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    /* width: 100%; */
    text-align: center;
    /* margin: 0; */
}

.adventure-section img {
    margin-left: auto;
    margin-right: auto;
    max-width: 120px;
    padding: 10px;
}

#sociallinks {
    margin-left: auto;
    padding: 10px;
}

#sociallinks img {
    max-width: 30px;
    height: auto;

}

#sociallinks a {
    text-decoration: none;
    padding: 5px;
}

footer {
    display: flex;
}

.footer-text {
    align-items: center;
    justify-content: center;
    margin-left: auto;
}

